language/move-lang/tests/move_check/typing/borrow_local_invalid.exp
error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/borrow_local_invalid.move:3:9
  │
2 │     fun t0(r: &u64, r_mut: &mut u64) {
  │               ---- Expected a single non-reference type, but found: '&u64'
3 │         &r;
  │         ^^ Invalid borrow

error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/borrow_local_invalid.move:4:9
  │
2 │     fun t0(r: &u64, r_mut: &mut u64) {
  │                            -------- Expected a single non-reference type, but found: '&mut u64'
3 │         &r;
4 │         &r_mut;
  │         ^^^^^^ Invalid borrow

error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/borrow_local_invalid.move:5:9
  │
2 │     fun t0(r: &u64, r_mut: &mut u64) {
  │               ---- Expected a single non-reference type, but found: '&u64'
  ·
5 │         &mut r;
  │         ^^^^^^ Invalid borrow

error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/borrow_local_invalid.move:6:9
  │
2 │     fun t0(r: &u64, r_mut: &mut u64) {
  │                            -------- Expected a single non-reference type, but found: '&mut u64'
  ·
6 │         &mut r_mut;
  │         ^^^^^^^^^^ Invalid borrow

